tests/baselines/reference/webpackInterop(allowrequireesm=node16).errors.txt
/main2.js(2,20): error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("./marked-esm.mjs")' call instead.
  To convert this file to an ECMAScript module, change its file extension to '.mjs' or create a local package.json file with `{ "type": "module" }`.


==== /main2.js (1 errors) ====
    const _1 = require("./unmarked-esm.js");
    const _2 = require("./marked-esm.mjs");
                       ~~~~~~~~~~~~~~~~~~
!!! error TS1479: The current file is a CommonJS module whose imports will produce 'require' calls; however, the referenced file is an ECMAScript module and cannot be imported with 'require'. Consider writing a dynamic 'import("./marked-esm.mjs")' call instead.
!!! error TS1479:   To convert this file to an ECMAScript module, change its file extension to '.mjs' or create a local package.json file with `{ "type": "module" }`.
    
==== /unmarked-esm.js (0 errors) ====
    export default "unmarked-esm";
    
==== /marked-esm.mjs (0 errors) ====
    export default "marked-esm";
    
==== /main1.js (0 errors) ====
    import unmarked from "./unmarked-esm.js";
    import marked from "./marked-esm.mjs";
    